# DjangoOrderService

./: .gitignore  README.md  compose.yml  example.env
.github/workflows/: ci.yml
app/: Dockerfile  README-dockerhub.md  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
app/core/: settings.py  urls.py  utils.py
app/customers/: authentication.py  models.py  serializers.py  tests.py  urls.py  views.py
app/customers/migrations/: 0001_initial_customers.py
app/customers/services/: auth_service.py  customer_service.py
app/orders/: models.py  serializers.py  tests.py  urls.py  views.py
app/orders/migrations/: 0001_initial_orders.py
app/orders/services/: order_service.py
charts/orders-service/: Chart.yaml  values.yaml
charts/orders-service/templates/: configmap.yaml  deployment.yaml  secrets.yaml  service.yaml
charts/postgres-savannah/: Chart.yaml  values.yaml
charts/postgres-savannah/templates/: pvc.yaml  secrets.yaml  service.yaml  statefulset.yaml
deploy/ansible/: ansible.cfg
deploy/ansible/inventories/: dev.ini
deploy/ansible/playbooks/: setup-kubernetes.yml  teardown-kubernetes.yml
deploy/ansible/playbooks/build-and-push-orders/: build-and-push-orders.yml
deploy/ansible/playbooks/build-and-push-orders/tasks/: authenticate-dockerhub.yml  build-image.yml  manage-version.yml  prepare-environment.yml  push-image.yml  verify-deployment.yml
deploy/ansible/playbooks/build-and-push-orders/vars/: main.yml
deploy/ansible/playbooks/setup-kubernetes/: setup-kubernetes.yml
deploy/ansible/playbooks/setup-kubernetes/handlers/: main.yml
(+8 files in other folders)
