[project]
name = "orders-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.5",
    "djangorestframework>=3.15.2",
    "django-environ>=0.12.0",
    "africastalking>=1.2.9",
    "httpx>=0.28.1",
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
    "faker>=35.2.0",
    "coverage>=7.6.10",
    "pytest-cov>=6.0.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
]
